--- a/algorithm-BOJ-inSequence/.project
+++ b/algorithm-BOJ-inSequence/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>algorithm-baekjun-gicho</name>
+	<name>algorithm-BOJ-inSequence</name>
 	<comment></comment>
 	<projects>
 	</projects>
