--- a/algorithm-BOJ-step/.project
+++ b/algorithm-BOJ-step/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>algorithm-BOJ-inSequence</name>
+	<name>algorithm-BOJ-step</name>
 	<comment></comment>
 	<projects>
 	</projects>
