--- a/algorithm-BOJ-step/bin/.gitignore
+++ b/algorithm-BOJ-step/bin/.gitignore
@@ -1,5 +1,6 @@
-/BOJ_basicMath2/
-/BOJ_recursion/
-/BOJ_bruteForce/
-/BOJ_sort/
-/BOJ_backTracking/
+/baek_array/
+/baek_for/
+/baek_function/
+/baek_if/
+/baek_string/
+/baek_while/
