--- a/algorithm-BOJ-step/bin/.gitignore
+++ b/algorithm-BOJ-step/bin/.gitignore
@@ -1,8 +1,12 @@
+/BOJ_basicMath2/
+/BOJ_bruteForce/
+/BOJ_dynamicProgramming/
+/BOJ_greedy/
+/BOJ_recursion/
+/BOJ_sort/
 /baek_array/
 /baek_for/
 /baek_function/
 /baek_if/
 /baek_string/
 /baek_while/
-/BOJ_dynamicProgramming/
-/BOJ_greedy/
